--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "tailwindcss": "^4.1.14",
     "typescript": "~5.9.3",
     "vite": "^7.1.9"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.14",
     "rxjs": "^7.8.2"
   }
 }
